# ifyl-daily-audio-emails

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
config/: defaults.json
docs/: EMAIL_PREVIEW.md  WORKFLOW.md
docs/github-actions/: create-daily-email-draft.yml
previews/: ifyl-daily-audio-email-preview.html
skills/ifyl-daily-audio-emails/: SKILL.md
skills/ifyl-daily-audio-emails/agents/: openai.yaml
src/ifyl_daily_audio_emails/: __init__.py  cli.py  config.py  dropbox_client.py  email_builder.py  kit_broadcast.py  pipeline.py  r2_audio.py  state.py  transcribe.py
templates/: daily_email.md
tests/: test_dropbox_client.py  test_email_builder.py  test_kit_broadcast.py  test_pipeline.py  test_r2_audio.py  test_state.py
