[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ifyl-daily-audio-emails"
version = "0.1.0"
description = "Prepare Kit-ready daily IFYL email drafts from Dropbox audio."
requires-python = ">=3.9"
dependencies = [
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
ifyl-daily-audio-emails = "ifyl_daily_audio_emails.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
